fix header not showing on mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,7 +24,7 @@
 }
 
 @media (max-width: 800px)  {
-  .border {
+  .hide-on-mobile {
     display: none;
   }
 }
